test/classes/casts/argumentCoerce_Out/error/from-shared-Child-nilable-to-unmanaged-Parent-nilable.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
// coercing from shared Child? to unmanaged Parent?
proc bar(out x: unmanaged Parent?) {
  x = new unmanaged Parent?();
}
proc foo() {
  var a = new shared Child?();
  bar(a);
}
proc main() {
  foo();
}
